h1. CHANGELOG

h3. 1.0.28 November 4, 2015

* move navigation auth links to a new partial 'app/views/layouts/_nav_links_for_auth.html.erb'

h3. 1.0.27 October 18, 2015

* create a file '1st_load_framework' instead of 'framework_and_overrides' to force loading a framework first (the asset pipeline loads files in a tree in alpha order)

h3. 1.0.26 May 8, 2015

* use Rails 'try' when testing if the current_user is an admin (contributed by bogdanvlviv)

h3. 1.0.25 March 8, 2015

* only apply styling for 'error_explanation' when not empty

h3. 1.0.24 November 16, 2014

* don't overwrite a Devise registration view if it already exists

h3. 1.0.23 October 6, 2014

* fix 'Remember Me' checkbox on 'Sign In' form for Bootstrap

h3. 1.0.22 September 14, 2014

* add navlink for an admin interface if Upmin is present

h3. 1.0.21 August 12, 2014

* bootstrap-sass v3.2.0 changes

h3. 1.0.20 June 19, 2014

* generate admin links when OmniAuth is used with Pundit

h3. 1.0.19 June 4, 2014

* "require 'rails_helper'" not needed when it is include in the '.rspec' file

h3. 1.0.18 June 2, 2014

* update for RSpec 3.0

h3. 1.0.17 May 30, 2014

* add styling for forms when either Devise or OmniAuth is present

h3. 1.0.16 May 10, 2014

* add missing Devise form for password reset
* add navigation spec when Devise is used and RSpec is installed
* change "log in" to "sign in" and "logout" to "sign out"

h3. 1.0.15 May 3, 2014

* update navlinks partial to accommodate role-based authorization
* drop workaround after release of bootstrap-sass 3.1.1.1 (fixes #20)

h3. 1.0.14 April 9, 2014

* workaround for Rails 4.1.0 pending release of bootstrap-sass 3.1.1.1 (fixes #20)
* modify 'config/application.rb' for Foundation 5 (fixes #19)
* remove unnecessary conditional on Bootstrap navlinks partial (contributed by Arnel Bucio)

h3. 1.0.13 March 23, 2014

* change quote marks around 'vendor/modernizr'

h3. 1.0.12 March 23, 2014

* Rails 4.1.0 changes the application.css file