@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.28"
+  VERSION = "1.0.29"
 end
